fixes search input layout bug on mobile

--- a/resources/css/list-mobile.css
+++ b/resources/css/list-mobile.css
@@ -157,7 +157,7 @@ input#search.places-search {
 	font-weight: 700;
 	display: inline-block;
 	width: 100px;
-	margin-left: -10px;
+	padding: 0;
 }
 
 .search-separator {
@@ -179,6 +179,10 @@ input#search.places-search {
 
 #search-suggestions a.suggestion:last-child {
 	margin-right: 0;
+}
+
+#empty-search-results {
+	margin-left: 20px;
 }
 
 #places {
